Fix spacing after sponsors

--- a/docs/css/insiders.css
+++ b/docs/css/insiders.css
@@ -14,17 +14,39 @@
 }
 
 @keyframes vibrate {
-  0%, 2%, 4%, 6%, 8%, 10%, 12%, 14%, 16%, 18% {
+
+  0%,
+  2%,
+  4%,
+  6%,
+  8%,
+  10%,
+  12%,
+  14%,
+  16%,
+  18% {
     -webkit-transform: translate3d(-2px, 0, 0);
-            transform: translate3d(-2px, 0, 0);
+    transform: translate3d(-2px, 0, 0);
   }
-  1%, 3%, 5%, 7%, 9%, 11%, 13%, 15%, 17%, 19% {
+
+  1%,
+  3%,
+  5%,
+  7%,
+  9%,
+  11%,
+  13%,
+  15%,
+  17%,
+  19% {
     -webkit-transform: translate3d(2px, 0, 0);
-            transform: translate3d(2px, 0, 0);
+    transform: translate3d(2px, 0, 0);
   }
-  20%, 100% {
+
+  20%,
+  100% {
     -webkit-transform: translate3d(0, 0, 0);
-            transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
   }
 }
 
@@ -53,16 +75,16 @@ a.insiders {
 }
 
 .sponsorship-item {
-  float: left;
   border-radius: 100%;
-  display: block;
+  display: inline-block;
   height: 1.6rem;
-  margin: .2rem;
+  margin: 0.1rem;
   overflow: hidden;
   width: 1.6rem;
 }
 
-.sponsorship-item:focus, .sponsorship-item:hover {
+.sponsorship-item:focus,
+.sponsorship-item:hover {
   transform: scale(1.1);
 }
 
@@ -72,7 +94,8 @@ a.insiders {
   width: 100%;
 }
 
-.sponsorship-item:focus img, .sponsorship-item:hover img {
+.sponsorship-item:focus img,
+.sponsorship-item:hover img {
   filter: grayscale(0);
 }
 
